WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286455
Some user installed fonts are not displayed correctly
https://bugs.webkit.org/show_bug.cgi?id=286455
Summary
Some user installed fonts are not displayed correctly
Per Arne Vollan
Reported
2025-01-23 19:37:04 PST
Some user installed fonts are not displayed correctly on macOS.
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2025-01-23 19:37:05 PST
<
rdar://problem/143423493
>
Per Arne Vollan
Comment 2
2025-01-23 19:41:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39483
EWS
Comment 3
2025-01-24 11:40:51 PST
Committed
289358@main
(44f57cb69c5d): <
https://commits.webkit.org/289358@main
> Reviewed commits have been landed. Closing PR #39483 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug