Some user installed fonts are not displayed correctly https://bugs.webkit.org/show_bug.cgi?id=286455 rdar://143423493

Reviewed by Brady Eidson.

We also need to register fonts in /Library/Fonts, not just in ~/Library/Fonts.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::addUserInstalledFontURLs):
(WebKit::WebProcessPool::registerUserInstalledFonts):

Canonical link: https://commits.webkit.org/289358@main